--- a/picklunch/templates/howToChoose_deli.html
+++ b/picklunch/templates/howToChoose_deli.html
@@ -64,14 +64,13 @@ font-size:45px;
 <h1>선택방법을 골라!</h1>
 <div class="triangle">
 <div class="triangle_content">
-<h2>싫어하는 음식점</h2>
-<h2>제외하고 고르기</h2>
+<a href = "/delivery/without" class="btn-example"> 싫어하는 음식빼고 고르기</a>
 </div>
 </div>
 <div class="rotated_triangle">
 </div>
 <div class="rotated_triangle_content">
-<h2>좋아하는 음식점 고르기</h2>
+<a href = "/delivery/like" class="btn-example"> 좋아하는 음식중에 고르기</a>
 </div>
 
 </body>
