css, result file update

--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -17,6 +17,6 @@
 <body>
     <h1>오늘은...</h1>
     <h2>다!</h2>
-    <div class="button_base b01_simple_rollover">다시 돌리기</div>
+    <div class="button b01">다시 돌리기</div>
 </body>
 </html>
