--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -58,11 +58,31 @@ color:black;
 font-size:45px;
 }
 
+.button {
+    margin: 0;
+    border: 0;
+    font-size: 18px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -100px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
 </style>
 </head>
 
 <body>
 <h1>식사방법을 골라!</h1>
+<div class="button b01">관리자 로그인</div>
 <div class="triangle">
 <div class="triangle_content">
 <a href = "/delivery/howtochoose" class="btn-example"> 배달음식 먹기</a>
