--- a/picklunch/static/css/main.css
+++ b/picklunch/static/css/main.css
@@ -281,6 +281,42 @@ body {
   display: block;
 }
 
+.button {
+    margin: 0;
+    border: 0;
+    font-size: 18px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -100px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
+.button:hover {
+    cursor: pointer;
+}
+
+.b01{
+    color: #000000;
+    border: #000000 solid 1px;
+    padding: 10px;
+    background-color: #ffffff;
+}
+
+.b01:hover {
+    color: #ffffff;
+    background-color: #000000;
+}
+
+
 a.btn-layerClose {
   display: inline-block;
   height: 25px;
