like is going great

--- a/picklunch/templates/howToChoose_deli.html
+++ b/picklunch/templates/howToChoose_deli.html
@@ -14,7 +14,7 @@ p{font-size:12px;margin:10px 0;}
 .triangle{
 width: 0px; height:0px;
 border-right:1100px solid transparent;
-border-bottom:450px solid black; 
+border-bottom:450px solid black;
 margin-left:85px;
 }
 
@@ -30,7 +30,7 @@ left: 115px;
 
 .triangle_content{
 position:absolute;
-top:62%; 
+top:62%;
 left:12%;
 text-align:right;
 z-index:1;
@@ -64,13 +64,13 @@ font-size:45px;
 <h1>선택방법을 골라!</h1>
 <div class="triangle">
 <div class="triangle_content">
-<a href = "/delivery/without" class="btn-example"> 싫어하는 음식빼고 고르기</a>
+<a href = "/delivery/without/0" class="btn-example"> 싫어하는 음식빼고 고르기</a>
 </div>
 </div>
 <div class="rotated_triangle">
 </div>
 <div class="rotated_triangle_content">
-<a href = "/delivery/like" class="btn-example"> 좋아하는 음식중에 고르기</a>
+<a href = "/delivery/like/0" class="btn-example"> 좋아하는 음식중에 고르기</a>
 </div>
 
 </body>
