--- a/picklunch/static/css/main.css
+++ b/picklunch/static/css/main.css
@@ -246,7 +246,7 @@ body {
 .pop-layer {
   display: none;
   position: absolute;
-  top: 50%;
+  /*top: 50%;*/
   left: 50%;
   width: 410px;
   height: auto;
