--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -1,16 +1,20 @@
-<html>
+<!doctype html>
+<html lang="kr">
 <head>
 <meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi"/>
 <title> Pick Lunch Menu </title>
-<style type="text/css">
-*{margin:0;padding:0;}
-img,fieldset{border:0;} ul,ol,li{list-style-type:none;} li img{vertical-align:top;}
+     <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-body{margin:20px;}
-h1{font-size:80px;margin:70px 30px 100px 30px;}
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<style type="text/css">
+
+h1{font-size:80px;margin:70px 30px 70px 30px;}
 h2{font-size:75px;}
-p{font-size:12px;margin:10px 0;}
 
 .triangle{
 width: 0px; height:0px;
@@ -82,7 +86,7 @@ font-size:45px;
 
 <body>
 <h1>식사방법을 골라!</h1>
-<div class="button b01">관리자 로그인</div>
+<div class="button b01" style="width:140px; margin-bottom:50px; margin-left:430px" >관리자 로그인</div>
 <div class="triangle">
 <div class="triangle_content">
 <a href = "/delivery/howtochoose" class="btn-example"> 배달음식 먹기</a>
