--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -1,13 +1,18 @@
-<html>
+<!doctype html>
+<html lang = "kr">
     <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi"/>
     <title> Pick Lunch Menu </title>
-    <style type="text/css">
-        *{margin:0;padding:0;}
-    img,fieldset{border:0;} ul,ol,li{list-style-type:none;} li img{vertical-align:top;}
+    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-    body{margin:20px;}
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <style type="text/css">
+
     h1{font-size:70px; margin-top:200px; margin-left:200px; margin-bottom:30px;}
     h2{font-size:70px; margin-top:70px; margin-left:950px;}
 
