--- a/picklunch/templates/howToChoose_deli.html
+++ b/picklunch/templates/howToChoose_deli.html
@@ -69,13 +69,13 @@ font-size:45px;
 <h1>선택방법을 골라!</h1>
 <div class="triangle">
 <div class="triangle_content">
-<a href = "/delivery/without/0" class="btn-example"> 싫어하는 음식빼고 고르기</a>
+<a href = "/delivery/without/reset" class="btn-example"> 싫어하는 음식빼고 고르기</a>
 </div>
 </div>
 <div class="rotated_triangle">
 </div>
 <div class="rotated_triangle_content">
-<a href = "/delivery/like/0" class="btn-example"> 좋아하는 음식중에 고르기</a>
+<a href = "/delivery/like/reset" class="btn-example"> 좋아하는 음식중에 고르기</a>
 </div>
 
 </body>
