--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -11,6 +11,38 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+<script type="text/javascript">
+function layer_open(el){
+   var $el = $('#' + el);
+   $el.fadeIn();      //레이어의 id를 temp변수에 저장
+   var $elWidth = ~~($el.outerWidth()),
+      $elHeight = ~~($el.outerHeight()),
+        docWidth = $(document).width(),
+        docHeight = $(document).height();
+      //bg 클래스가 없으면 일반레이어로 실행한다.
+
+      // 화면의 중앙에 레이어를 띄운다.
+        if ($elHeight < docHeight || $elWidth < docWidth) {
+            $el.css({
+                marginTop: -$elHeight /4,
+                marginLeft: -$elWidth/2
+            })
+        } else {
+            $el.css({top: 0, left: 0});
+        }
+        $el.find('a.btn-layerClose').click(function(){
+           $el.fadeOut();
+                           // 닫기 버튼을 클릭하면 레이어가 닫힌다.
+            return false;
+        });
+        $el.find('a.btn-layerEdit').click(function(){
+           layer_open(el+'edit');
+
+            return false;
+        });//만약 edit버튼을 누르면 edit에 대한 layer가 새로 생기간다.
+}</script>
+
 <style type="text/css">
 
 h1{font-size:80px;margin:70px 30px 70px 30px;}
@@ -86,7 +118,26 @@ font-size:45px;
 
 <body>
 <h1>식사방법을 골라!</h1>
-<div class="button b01" style="width:140px; margin-bottom:50px; margin-left:430px" >관리자 로그인</div>
+
+<div class="button b01" style="width:140px; margin-bottom:50px; margin-left:430px" >
+    <a href="/login" onclick="layer_open('login'); return false;">관리자 로그인</div>
+
+        <div id="login" class="pop-layer" ><!--음식점 추가 팝업-->
+            <div class="pop-container">
+                <div class="pop-conts" >관리자 로그인<br><br>
+                    <form action='/login'  method='POST'>
+                        <div>
+                            <label for='password'>패스워드 :</label>
+                            <input type='text' id='password' name='password'><br>
+                        </div>
+                        <input type="submit" value="로그인" style="font-weight: bold; color: #ffffff;font-size: 15px; background-color : #336699; border:1px solid #333366; padding :3px">
+                        <a href="#" class="btn-layerClose">닫기</a>
+                    </div>
+                </form>
+                </div>
+            </div>
+        </div>
+
 <div class="triangle">
 <div class="triangle_content">
 <a href = "/delivery/howtochoose" class="btn-example"> 배달음식 먹기</a>
