--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -15,12 +15,14 @@
 
     h1{font-size:70px; margin-top:200px; margin-left:200px; margin-bottom:30px;}
     h2{font-size:70px; margin-top:70px; margin-left:950px;}
+    h3{font-size:100px; margin-top:70px; margin-left:400px;}
 
     </style>
 </head>
 
 <body>
     <h1>오늘은...</h1>
+    <h3>{{result_choice}}</h2>
     <h2>다!</h2>
     <div class="button b01">다시 돌리기</div>
 </body>
