--- a/picklunch/templates/choice.html
+++ b/picklunch/templates/choice.html
@@ -94,15 +94,15 @@ background-size: cover;
 
         <table class="contact_list">
 
-        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">음식점</p><!--페이지 제목-->
+        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">랜덤돌릴까?</p><!--페이지 제목-->
 
 
         </thead>
-
+        <a href = "/goto/result" class="btn-example">돌리기</a>
         <tbody><!--음식점목록-->
           <tr>
               <th scop="row" style="background: #f5f5f5">&nbsp;&nbsp;<i class="fa fa-heart" style="color:#ff0033"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이름</th>
-              <td style="background:#f5f5f5;font-weight: bold">전화번호</td> </tr>
+              <td style="background:#f5f5f5;font-weight: bold">분류</td> </tr>
 
 
               {%- for i in CHOICE %} <!--음식점 목록의 개수만큼 반복-->
