--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -22,7 +22,7 @@
 
 <body>
     <h1>오늘은...</h1>
-    <h3>{{result_choice}}</h2>
+    <h3>{{result_choice.name}}</h2>
     <h2>다!</h2>
     <div class="button b01">다시 돌리기</div>
 </body>
