--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -121,7 +121,7 @@ font-size:45px;
 <body>
 <h1>식사방법을 골라!</h1>
 <!-- <div class="button b01" style="width:140px; margin-left:430px" > -->
-    <a href="#manager_login" class = "btn-example" onclick="layer_open('manager_login'); return false;">관리자 로그인</a>
+    <a href="#login" class = "btn-example" onclick="layer_open('manager_login'); return false;">관리자 로그인</a>
         <div id="manager_login" class="pop-layer" ><!--음식점 추가 팝업-->
             <div class="pop-container">
                 <div class="pop-conts" >관리자 로그인<br><br>
