--- a/picklunch/templates/listdw.html
+++ b/picklunch/templates/listdw.html
@@ -84,18 +84,10 @@ background-size: cover;
 }</style>
 
    <div>
-
-       <span>
-      <form class="search-bar" action="/search" method="POST">
-         <input type='text' name='string' class='input_text' placeholder='search'>
-         <a type="submit" class="fa fa-search" style = "color:#153d73; font-size: 20px"></a>
-      </form><!--검색창 form-->
-</span>
-
-
         <table class="contact_list">
 
-        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">음식점</p><!--페이지 제목-->
+        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">음식점 (하트를 눌러 싫어하는 음식을 제외하세요!)<br></p>
+                    <p style="font-weight: font-size: 12px; margin-left: 30px; margin-top: 20px">모두 제외 후에는 하단의 다음버튼을 클릭해주세요.<br></p><!--페이지 제목-->
 
 
         </thead>
