--- a/picklunch/templates/listdl.html
+++ b/picklunch/templates/listdl.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
@@ -94,7 +95,7 @@ background-size: cover;
         <tbody><!--음식점목록-->
           <tr>
               <th scop="row" style="background: #f5f5f5">&nbsp;&nbsp;<i class="fa fa-heart" style="color:#ff0033"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이름</th>
-              <td style="background:#f5f5f5;font-weight: bold">전화번호</td> </tr>
+              <td style="background:#f5f5f5;font-weight: bold">카테고리</td> </tr>
 
 
               {%- for i in STORELIST %} <!--음식점 목록의 개수만큼 반복-->
@@ -121,6 +122,7 @@ background-size: cover;
        {%- endfor %}
        </tbody>
       </table>
+      <div class = "button b01" style="width:100px; left:800px;">다음</div>
    </div>
 
 </main>
