--- a/picklunch/templates/listdl.html
+++ b/picklunch/templates/listdl.html
@@ -81,7 +81,12 @@ background: url('https://static.pexels.com/photos/28773/pexels-photo-28773.jpg')
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
-}</style>
+}
+
+.button {
+left: 800px;
+}
+</style>
 
    <div>
         <table class="contact_list">
@@ -122,7 +127,7 @@ background-size: cover;
        {%- endfor %}
        </tbody>
       </table>
-      <div class = "button b01" style="width:100px; left:800px;">다음</div>
+      <a href="#" class = "button b01">다음</a>
    </div>
 
 </main>
