--- a/picklunch/templates/listgw.html
+++ b/picklunch/templates/listgw.html
@@ -61,6 +61,10 @@ window.onload=function heart(){
 
 <style>
 a{margin-left:10px;}
+
+.button {
+left: 800px;
+}
 </style>
 
 </head>
@@ -122,7 +126,7 @@ background-size: cover;
        {%- endfor %}
        </tbody>
       </table>
-      <div class = "button b01" style="width:100px; left:800px;">다음</div>
+      <a href="#" class = "button b01">다음</a>
    </div>
 
 </main>
