--- a/picklunch/templates/choice.html
+++ b/picklunch/templates/choice.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
@@ -98,7 +99,7 @@ background-size: cover;
 
 
         </thead>
-        <a href = "/goto/result" class="btn-example">돌리기</a>
+       <a href = "/goto/result" class="button b01">돌리기</a>
         <tbody><!--음식점목록-->
           <tr>
               <th scop="row" style="background: #f5f5f5">&nbsp;&nbsp;<i class="fa fa-heart" style="color:#ff0033"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;이름</th>
