--- a/picklunch/templates/manage_list.html
+++ b/picklunch/templates/manage_list.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
@@ -124,6 +125,8 @@ background-size: cover;
           </div>
 
         </thead>
+
+        <a href="#" class="button b01">로그아웃</a>
 
         <tbody><!--음식점목록-->
           <tr>
