--- a/picklunch/templates/listgl.html
+++ b/picklunch/templates/listgl.html
@@ -126,7 +126,7 @@ background-size: cover;
        {%- endfor %}
        </tbody>
       </table>
-      <a href="#" class = "button b01">다음</a>
+       <a href="/goto/choice" class = "button b01" style="bottom: 65px">다음</a>
    </div>
 
 </main>
