--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -22,8 +22,7 @@
 
 <body>
     <h1>오늘은...</h1>
-    <h3>{{result_choice.name}}</h2>
-    <h2>다!</h2>
-    <div class="button b01">다시 돌리기</div>
+    <h2 style="font-size:100px; margin-top:70px; margin-left:400px;">{{result_choice.name}}
+    다! <div class="button b01" style="font-size: 18px">싫어 다시 돌려</div> </h2>
 </body>
 </html>
