--- a/picklunch/templates/howToChoose_deli.html
+++ b/picklunch/templates/howToChoose_deli.html
@@ -3,43 +3,65 @@
 <head>
 <meta charset="utf-8"/>
 <title> Pick Lunch Menu </title>
-<link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
+     <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
+<script type="text/javascript">
+function layer_open(el){
+   var $el = $('#' + el);
+   $el.fadeIn();      //레이어의 id를 temp변수에 저장
+   var $elWidth = ~~($el.outerWidth()),
+      $elHeight = ~~($el.outerHeight()),
+        docWidth = $(document).width(),
+        docHeight = $(document).height();
+      //bg 클래스가 없으면 일반레이어로 실행한다.
+
+      // 화면의 중앙에 레이어를 띄운다.
+        if ($elHeight < docHeight || $elWidth < docWidth) {
+            $el.css({
+                marginTop: -$elHeight /4,
+                marginLeft: -$elWidth/2
+            })
+        } else {
+            $el.css({top: 0, left: 0});
+        }
+        $el.find('a.btn-layerClose').click(function(){
+           $el.fadeOut();
+                           // 닫기 버튼을 클릭하면 레이어가 닫힌다.
+            return false;
+        });
+        $el.find('a.btn-layerEdit').click(function(){
+           layer_open(el+'edit');
+
+            return false;
+        });//만약 edit버튼을 누르면 edit에 대한 layer가 새로 생기간다.
+}</script>
+
 <style type="text/css">
 
-h1{font-size:80px;margin:70px 30px 100px 30px;}
+h1{font-size:80px;margin:70px 30px 70px 30px;}
+h2{font-size:75px;}
 
 .triangle{
 width: 0px; height:0px;
 border-right:1100px solid transparent;
-border-bottom:450px solid black;
-margin-left:85px;
-}
-
-.triangle:before{
-content:"";
-width:0px; height:0px;
-position:absolute;
-border-right:1034px solid transparent;
-border-bottom:423px solid white;
-bottom: 122px;
-left: 98px;
+border-top:450px solid black;
 }
 
 .triangle_content{
 position:absolute;
-top:62%;
-left:12%;
+top:45%;
+left:13%;
 text-align:right;
 z-index:1;
-color:black;
+color:white;
 font-size:45px;
 }
 
@@ -47,22 +69,51 @@ font-size:45px;
 width:0px; height:0px;
 position:relative;
 border-left:1100px solid transparent;
-border-top:450px solid black;
+border-bottom:450px solid black;
 margin-top:-450px;
-margin-left:200px;
+margin-left:50px;
+}
+
+.rotated_triangle:before{
+content:"";
+width:0px; height:0px;
+position:absolute;
+border-left:1034px solid transparent;
+border-bottom:423px solid white;
+left: -1045px;
+top: 17px;
 }
 
 .rotated_triangle_content{
 position:absolute;
-top:40%;
+top:65%;
 left:45%;
 text-align:center;
 z-index:1;
-color:white;
+color:black;
 font-size:45px;
 }
 
+.button {
+    margin: 0;
+    border: 0;
+    font-size: 18px;
+    position: relative;
+    top: 70%;
+    left: auto;
+    margin-top: -25px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
 </style>
+
 </head>
 
 <body>
