--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -53,7 +53,6 @@ h2{font-size:75px;}
 width: 0px; height:0px;
 border-right:1100px solid transparent;
 border-top:450px solid black;
-margin-left:85px;
 }
 
 .triangle_content{
@@ -72,7 +71,7 @@ position:relative;
 border-left:1100px solid transparent;
 border-bottom:450px solid black;
 margin-top:-450px;
-margin-left:200px;
+margin-left:50px;
 }
 
 .rotated_triangle:before{
@@ -100,10 +99,9 @@ font-size:45px;
     border: 0;
     font-size: 18px;
     position: relative;
-    top: 50%;
-    left: 50%;
+    top: 70%;
+    left: auto;
     margin-top: -25px;
-    margin-left: -100px;
     width: 200px;
     height: 50px;
     text-align: center;
@@ -119,12 +117,13 @@ font-size:45px;
 </head>
 
 <body>
-<h1>식사방법을 골라!</h1>
-<!-- <div class="button b01" style="width:140px; margin-left:430px" > -->
-    <a href="#login" class = "btn-example" onclick="layer_open('manager_login'); return false;">관리자 로그인</a>
+<h1>식사방법을 골라!
+    <a href="#login" onclick="layer_open('manager_login'); return false;"
+    class="button b01" style="width:140px; ">관리자 로그인</a>
+
         <div id="manager_login" class="pop-layer" ><!--음식점 추가 팝업-->
             <div class="pop-container">
-                <div class="pop-conts" >관리자 로그인<br><br>
+                <div class="pop-conts" style="font-size: 100px" >관리자 로그인<br><br>
                     <form action='/login'  method='POST'>
                         <p class = "ctxt mb20">
                             <label for='password'>패스워드 :</label>
@@ -139,7 +138,7 @@ font-size:45px;
                 </form>
                 </div>
             </div>
-
+</h1>
 
 
 
