--- a/picklunch/templates/listdl.html
+++ b/picklunch/templates/listdl.html
@@ -127,7 +127,7 @@ background-size: cover;
        {%- endfor %}
        </tbody>
       </table>
-      <a href="#" class = "button b01">다음</a>
+      <a href="/deli/choice" class = "button b01" style="bottom: 65px">다음</a>
    </div>
 
 </main>
