--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -7,10 +7,41 @@
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript">
+function layer_open(el){
+   var $el = $('#' + el);
+   $el.fadeIn();      //레이어의 id를 temp변수에 저장
+   var $elWidth = ~~($el.outerWidth()),
+      $elHeight = ~~($el.outerHeight()),
+        docWidth = $(document).width(),
+        docHeight = $(document).height();
+      //bg 클래스가 없으면 일반레이어로 실행한다.
+
+      // 화면의 중앙에 레이어를 띄운다.
+        if ($elHeight < docHeight || $elWidth < docWidth) {
+            $el.css({
+                marginTop: -$elHeight /4,
+                marginLeft: -$elWidth/2
+            })
+        } else {
+            $el.css({top: 0, left: 0});
+        }
+        $el.find('a.btn-layerClose').click(function(){
+           $el.fadeOut();
+                           // 닫기 버튼을 클릭하면 레이어가 닫힌다.
+            return false;
+        });
+        $el.find('a.btn-layerEdit').click(function(){
+           layer_open(el+'edit');
+
+            return false;
+        });//만약 edit버튼을 누르면 edit에 대한 layer가 새로 생기간다.
+}</script>
     <style type="text/css">
 
     h1{font-size:70px; margin-top:200px; margin-left:200px; margin-bottom:30px;}
@@ -22,7 +53,26 @@
 
 <body>
     <h1>오늘은...</h1>
-    <h2 style="font-size:100px; margin-top:70px; margin-left:400px;">{{result_choice.name}}
-    다! <div class="button b01" style="font-size: 18px">싫어 다시 돌려</div> </h2>
+    <h2 style="margin-top:70px; margin-left:400px;">
+        <a href = "#{{result_choice.name}}" class="btn-example" style = "font-size:100px;"onclick="layer_open('{{result_choice.name}}'); return false;" > {{result_choice.name }}</a>
+        <div id="{{result_choice.name}}"  style = "font-size:15px;" class="pop-layer" ><!--이름을 누르면 음식점를 자세하게 볼 수 있다-->
+             <div class="pop-container">
+                   <div class="pop-conts" style = "font-weight:bold;">음식점 상세보기<br><br>
+
+<p class = "ctxt mb20">이름: {{ result_choice.name }}<br>전화번호: {{ result_choice.number }}<br>사이트: <a href="{{result_choice.address}}" > {{result_choice.address}}</a><br>분류: {{result_choice.category}}<br>배달여부: {{result_choice.delivery}}<br>
+                        </p>
+
+                         <div class="btn-r">
+                             <a href="#" class="btn-layerClose">닫기</a>
+                         </div>
+
+                     </div>
+                 </div>
+          </div>
+    다!
+    <div class="button b01" style="font-size: 18px">
+        <a href = "/result/{{count}}" class="btn-example"> 싫어 다시 돌려</a>
+    </div>
+    </h2>
 </body>
 </html>
