--- a/picklunch/templates/howToChoose_goto.html
+++ b/picklunch/templates/howToChoose_goto.html
@@ -120,13 +120,13 @@ font-size:45px;
 <h1>선택방법을 골라!</h1>
 <div class="triangle">
 <div class="triangle_content">
-<a href = "/delivery/without/reset" class="btn-example"> 싫어하는 음식빼고 고르기</a>
+<a href = "/goto/without/reset" class="btn-example"> 싫어하는 음식빼고 고르기</a>
 </div>
 </div>
 <div class="rotated_triangle">
 </div>
 <div class="rotated_triangle_content">
-<a href = "/delivery/like/reset" class="btn-example"> 좋아하는 음식중에 고르기</a>
+<a href = "/goto/like/reset" class="btn-example"> 좋아하는 음식중에 고르기</a>
 </div>
 
 </body>
