--- a/picklunch/templates/howToChoose_deli.html
+++ b/picklunch/templates/howToChoose_deli.html
@@ -52,12 +52,12 @@ h2{font-size:75px;}
 .triangle{
 width: 0px; height:0px;
 border-right:1100px solid transparent;
-border-top:450px solid black;
+border-bottom:450px solid black;
 }
 
 .triangle_content{
 position:absolute;
-top:45%;
+top:67%;
 left:13%;
 text-align:right;
 z-index:1;
@@ -69,7 +69,7 @@ font-size:45px;
 width:0px; height:0px;
 position:relative;
 border-left:1100px solid transparent;
-border-bottom:450px solid black;
+border-top:450px solid black;
 margin-top:-450px;
 margin-left:50px;
 }
@@ -79,14 +79,14 @@ content:"";
 width:0px; height:0px;
 position:absolute;
 border-left:1034px solid transparent;
-border-bottom:423px solid white;
+border-top:423px solid white;
 left: -1045px;
-top: 17px;
+top: -439px;
 }
 
 .rotated_triangle_content{
 position:absolute;
-top:65%;
+top:42%;
 left:45%;
 text-align:center;
 z-index:1;
