--- a/picklunch/templates/dontEat.html
+++ b/picklunch/templates/dontEat.html
@@ -17,14 +17,16 @@
     h2{font-size:70px; margin-top:70px; margin-left:950px;}
     h3{font-size:100px; margin-top:70px; margin-left:400px;}
 
+    .button {
+    top:200px;
+    left:1200px;
+    }
     </style>
 </head>
 
 <body>
     <h1>기회는 3번 뿐이에요~</h1>
     <h2 style="font-size:100px; margin-top:70px; margin-left:400px;">이럴거면 먹지마세요~</h2>
-    <div class="button b01" style="font-size: 18px">
-        <a href = "/" class="btn-example">새로시작</a>
-    </div>
+        <a href = "/" class="button b01">새로시작</a>
 </body>
 </html>
