--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -69,9 +69,8 @@ function layer_open(el){
                      </div>
                  </div>
           </div>
-    먹자!
-    <div class="button b01" style="font-size: 18px">
-        <a href = "/result/{{count}}" class="btn-example"> 싫어 다시 돌려</a>
+    먹자!<br>
+        <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
     </div>
     </h2>
 </body>
