--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -95,22 +95,17 @@ font-size:45px;
 }
 
 .button {
-    margin: 0;
-    border: 0;
-    font-size: 18px;
-    position: relative;
     top: 70%;
     left: auto;
     margin-top: -25px;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-user-select: none;
-    cursor: default;
 }
+
+.b01{
+color: #ffffff;
+border: #ffffff;
+}
+
+
 
 </style>
 
