--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -47,6 +47,11 @@ function layer_open(el){
     h1{font-size:70px; margin-top:200px; margin-left:200px; margin-bottom:30px;}
     h2{font-size:70px; margin-top:70px; margin-left:950px;}
     h3{font-size:100px; margin-top:70px; margin-left:400px;}
+    
+    .button{
+    top:150px;
+    left:1100px;
+    }
 
     </style>
 </head>
@@ -70,8 +75,8 @@ function layer_open(el){
                  </div>
           </div>
     먹자!<br>
-        <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
     </div>
     </h2>
+    <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
 </body>
 </html>
