--- a/picklunch/templates/listgl.html
+++ b/picklunch/templates/listgl.html
@@ -3,8 +3,7 @@
    <head>
    <meta charset="UTF-8">
 
-
-     <title>Addressbook</title>
+<title> Pick Lunch Menu </title>
      <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
