--- a/picklunch/templates/choice.html
+++ b/picklunch/templates/choice.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
 
 
-     <title>Addressbook</title>
+<title> Pick Lunch Menu </title>
      <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -87,7 +87,7 @@ background-size: cover;
 
         <table class="contact_list">
 
-        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">랜덤돌릴까?</p><!--페이지 제목-->
+        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px">랜덤돌릴까? (다시돌리기는 2번만 허용됩니다.)</p><!--페이지 제목-->
 
 
         </thead>
