--- a/picklunch/templates/manage_list.html
+++ b/picklunch/templates/manage_list.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
 
 
-     <title>Addressbook</title>
+<title> Pick Lunch Menu </title>
      <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -69,9 +69,13 @@ a{margin-left:10px;}
 
 <input type="checkbox" id="menu_state" checked>
 
-<a href="/new" onclick="layer_open('add'); return false;"><!--음식점 추가-->
+<a href="/new" onclick="layer_open('add'); return false;" style=""><!--음식점 추가-->
    <i class="fa fa-plus"></i>
-   <span>Plus</span></a>
+   <span>음식점 추가</span></a>
+<br>
+<a href="/">
+   <i class="fa fa-unlock" aria-hidden="true"></i>
+   <span>로그아웃</span></a>
 <main>
    <header></header>
 
@@ -125,8 +129,6 @@ background-size: cover;
           </div>
 
         </thead>
-
-        <a href="#" class="button b01">로그아웃</a>
 
         <tbody><!--음식점목록-->
           <tr>
