--- a/picklunch/templates/result.html
+++ b/picklunch/templates/result.html
@@ -48,6 +48,11 @@ function layer_open(el){
     h2{font-size:70px; margin-top:70px; margin-left:950px;}
     h3{font-size:100px; margin-top:70px; margin-left:400px;}
 
+    .button{
+    top:150px;
+    left:1100px;
+    }
+
     </style>
 </head>
 
@@ -65,13 +70,11 @@ function layer_open(el){
                          <div class="btn-r">
                              <a href="#" class="btn-layerClose">닫기</a>
                          </div>
-
-                     </div>
-                 </div>
-          </div>
+                    </div>
+             </div>
+        </div>
     먹자!<br>
-        <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
-    </div>
     </h2>
+        <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
 </body>
 </html>
