--- a/picklunch/templates/dontEat.html
+++ b/picklunch/templates/dontEat.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h1>기회는 <span color:"red">3번</span> 뿐이에요~</h1>
+    <h1>기회는 <span style="color:red"><b>3번</b></span> 뿐이에요~</h1>
     <h2>이럴거면 먹지마세요~</h2>
         <a href = "/" class="button b01">새로시작</a>
 </body>
