--- a/picklunch/templates/howToEat.html
+++ b/picklunch/templates/howToEat.html
@@ -114,25 +114,23 @@ border: #ffffff;
 <body>
 <h1>식사방법을 골라!
     <a href="#login" onclick="layer_open('manager_login'); return false;"
-    class="button b01" style="width:140px; ">관리자 로그인</a>
+    class="button b01" style="width:140px;">관리자 로그인</a>
 
         <div id="manager_login" class="pop-layer"><!--음식점 추가 팝업-->
             <div class="pop-container">
                 <div class="pop-conts" style="font-size: 15px" >관리자 로그인<br><br>
-                    <form action='/login'  method='POST'>
-                        <p class = "ctxt mb20">
-                            <label for='password'>패스워드 :</label>
-                            <input type='text' id='password' name='password'><br>
-
-                        </p>
-                        <input type="submit" value="로그인" style="font-weight: bold; color: #ffffff;font-size: 15px; background-color : #336699; border:1px solid #333366; padding :3px">
-                        <div class="btn-r">
-                            <a href="#" class="btn-layerClose">닫기</a>
-                        </div>
+                        <form action="/login" method='POST'>
+                         패스워드:
+                         <input type='text' name='password' id='password'>
+                        
+                         <input type="submit" value="로그인" style="height: 30px; font-weight: bold; color: #ffffff;font-size: 15px; background-color : #336699; border:1px solid #333366; padding :3px">
+                        </form>
+                    <div class="btn-r">
+                        <a href="#" class="btn-layerClose">닫기</a>
                     </div>
-                </form>
                 </div>
             </div>
+        </div>
 </h1>
 
 
