--- a/picklunch/templates/dontEat.html
+++ b/picklunch/templates/dontEat.html
@@ -21,13 +21,15 @@
     .button {
     top:150px;
     left:1100px;
+    color: #ffffff;
+    border:#ffffff;
     }
     </style>
 </head>
 
 <body>
-    <h1>기회는 <span style="color:red"><b>3번</b></span> 뿐이에요~</h1>
-    <h2>이럴거면 먹지마세요~</h2>
-        <a href = "/" class="button b01">새로시작</a>
+    <h1>기회는 <span style="color:red"><b>3번</b></span> 뿐이에요!</h1>
+    <h2>스스로 골라보세요~</h2>
+        <a href = "/" class="button b01" >새로시작</a>
 </body>
 </html>
