--- a/picklunch/templates/moreThanOne.html
+++ b/picklunch/templates/moreThanOne.html
@@ -1,17 +1,20 @@
 <!doctype html>
-<html lang = "kr">
-    <head>
-    <meta charset="utf-8"/>
-    <title> Pick Lunch Menu </title>
-    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
+<html lang="kr">
+   <head>
+   <meta charset="UTF-8">
+
+
+<title> Pick Lunch Menu </title>
+     <link rel="shortcut icon" href="https://lh3.googleusercontent.com/sHMKgiee-dwZHonhBF-7b4e9y7eXXk1_yxIeVoxJ3jj0IpAPil66SeI6qTz88iuK_Q=w300" />
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/button.css')}}"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 <script type="text/javascript">
 function layer_open(el){
    var $el = $('#' + el);
@@ -41,40 +44,85 @@ function layer_open(el){
 
             return false;
         });//만약 edit버튼을 누르면 edit에 대한 layer가 새로 생기간다.
-}</script>
-    <style type="text/css">
-
-    h1{font-size:70px; margin-top:200px; margin-left:200px; margin-bottom:30px;}
-    h2{font-size:70px; margin-top:70px; margin-left:950px;}
-    h3{font-size:100px; margin-top:70px; margin-left:400px;}
-
-    .button{
-    top:150px;
-    left:1100px;
+}
+//즐겨찾기 추가버튼인 하트를 이모티콘으로 바꾸기 위한 함수
+window.onload=function heart(){
+  var obj=document.getElementsByName('favoriticon');
+  for(var i=0;i<obj.length;i++){
+    if(obj[i].title=="X"){
+      obj[i].className="fa fa-heart-o";
     }
+    else{
+      obj[i].className="fa fa-heart";
+    }
+  }
+}
+</script>
 
-    </style>
+<style>
+a{margin-left:10px;}
+</style>
+
 </head>
 
 <body>
-    <h1>오늘은...</h1>
-    <h2 style="margin-top:70px; margin-left:350px;">
-        <a href = "#{{result_choice.name}}" class="btn-example" style = "font-size:100px;"onclick="layer_open('{{result_choice.name}}'); return false;" > {{result_choice.name }}</a>
-        <div id="{{result_choice.name}}"  style = "font-size:15px;" class="pop-layer" ><!--이름을 누르면 음식점를 자세하게 볼 수 있다-->
-             <div class="pop-container">
-                   <div class="pop-conts" style = "font-weight:bold;">음식점 상세보기<br><br>
 
-<p class = "ctxt mb20">이름: {{ result_choice.name }}<br>전화번호: {{ result_choice.number }}<br>사이트: <a href="{{result_choice.address}}" > {{result_choice.address}}</a><br>분류: {{result_choice.category}}<br>배달여부: {{result_choice.delivery}}<br>
-                        </p>
+<input type="checkbox" id="menu_state" checked>
 
-                         <div class="btn-r">
-                             <a href="#" class="btn-layerClose">닫기</a>
-                         </div>
-                    </div>
-             </div>
-        </div>
-    먹자!<br>
-    </h2>
-        <a href = "/result/{{count}}" class="button b01"> 싫어 다시 돌려</a>
+<main>
+   <header></header>
+
+   <style>
+body
+{
+background: url('https://static.pexels.com/photos/28773/pexels-photo-28773.jpg')
+ no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}</style>
+
+   <div>
+
+        <table class="contact_list">
+
+        <thead><p style="font-weight: bold; font-size: 17px; margin-left: 30px; margin-top: 20px"> 목록은 1개 이상 선택해야합니다! <br> </p>
+            <p style="font-weight: font-size: 12px; margin-left: 30px; margin-top: 20px">뒤로가서 다시 선택해주세요.<br></p><!--페이지 제목-->
+
+
+        </thead>
+        <tbody><!--음식점목록-->
+          <tr>
+              <th scop="row" style="background: #f5f5f5">&nbsp;&nbsp;이름</th>
+              <td style="background:#f5f5f5;font-weight: bold">분류</td> </tr>
+
+
+              {%- for i in CHOICE %} <!--음식점 목록의 개수만큼 반복-->
+              <th scope="row">
+              <a href = "#{{i.name}}" class="btn-example" onclick="layer_open('{{i.name}}'); return false;" > {{i.name }}</a>
+              <div id="{{i.name}}" class="pop-layer" ><!--이름을 누르면 음식점를 자세하게 볼 수 있다-->
+                   <div class="pop-container">
+                         <div class="pop-conts">음식점 상세보기<br><br>
+
+    <p class = "ctxt mb20">이름: {{ i.name }}<br>전화번호: {{ i.number }}<br>사이트:<a href="{{i.address}}" >{{i.address}}</a><br>분류: {{i.category}}<br>배달여부: {{i.delivery}}<br>
+                              </p>
+
+                               <div class="btn-r">
+                                   <a href="#" class="btn-layerClose">닫기</a>
+                               </div>
+
+                           </div>
+                       </div>
+                </div>
+              </th>
+              <td>{{ i.category }}</td>
+          </tr>
+       {%- endfor %}
+       </tbody>
+      </table>
+   </div>
+
+</main>
 </body>
 </html>
